--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 WebP.xcodeproj/xcuserdata
 WebP.xcodeproj/project.xcworkspace/xcuserdata
+WebP.xcodeproj/project.xcworkspace/xcshareddata
+DerivedData
