--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ WebP.xcodeproj/project.xcworkspace/xcuserdata
 WebP.xcodeproj/project.xcworkspace/xcshareddata
 DerivedData
 .DS_Store
+webpcnv/webpcnv.xcodeproj/xcuserdata
